--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
     <script src="https://cdn.jsdelivr.net/parallax.js/1.4.2/parallax.min.js"></script>
 </head>
 <body>
-    <h1>Shirley Fernandes</h1>
+    <header>
+        <div class="container" id="nac-container">
+            <nav class="navbar navbar-expand-lg fixed-top">
+                <a hef="#" class="navbar-brand">
+                    <img id="logo" src="img/logoFernandes.png" alt="Fernandes consultoria"> Fernandes consultoria
+                </a>
+            </nav>
+        </div>
+    </header>
     <script src="js/scripts.js"></script>
 </body>
 </html>
