--- a/index.html
+++ b/index.html
@@ -26,8 +26,19 @@
         <div class="container" id="nac-container">
             <nav class="navbar navbar-expand-lg fixed-top">
                 <a hef="#" class="navbar-brand">
-                    <img id="logo" src="img/logoFernandes.png" alt="Fernandes consultoria"> Fernandes consultoria
+                    <img id="logo" src="img/logoFernandesSF.png" alt="Fernandes Consultoria Digital"> Fernandes Consultoria Digital
                 </a>
+                <button class="navbar-toggler" type="buttom" data-toggle="collapse" data-target="#navbar-links" aria-controls="navbar-links" aria-expanded="false" aria-label="toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbar-links">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link" id="home-menu">Home</a>
+                        <a class="nav-item nav-link" id="services-menu">Serviços</a>
+                        <a class="nav-item nav-link" id="contact-menu">Contato</a>
+                    </div>
+
+                </div>
             </nav>
         </div>
     </header>
